--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Module 2 Coding</title>
+	<link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-<h1>Hello Coursera! It's a great course!</h1>
+<h1>Test Menu</h1>
+
+<div class="row">
+	<div class="col-lg-4 col-md-6 box">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+		<p id="b1" class="p1">Chiken</p>
+	</div>
+	<div class="col-lg-4 col-md-6 box">
+		<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
+		<p id="b2" class="p1">Beef</p>
+	</div>
+	<div class="col-lg-4 col-md-12 box">
+		<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. </p>
+		<p id="b3" class="p1">Sushi</p>
+		</div>
+</div>
 </body>
 </html>
