--- a/site/mod2_solution/index.html
+++ b/site/mod2_solution/index.html
@@ -13,7 +13,7 @@
 <div class="row">
 	<div class="col-lg-4 col-md-6 box">
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-		<p id="b1" class="p1">Chiken</p>
+		<p id="b1" class="p1">Chicken</p>
 	</div>
 	<div class="col-lg-4 col-md-6 box">
 		<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
