--- a/site/mod3_solution/index.html
+++ b/site/mod3_solution/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Food, LLC</title>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,7 +19,62 @@
   </head>
 <body>
 
-  <h1>Hello Coursera!</h1>
+ <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <div class="navbar-brand">
+            <a href="index.html" class="pull-left"><h1>Food, LLC</h1></a>
+          </div>
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right">
+            <li>
+              <a href="#" class="visible-xs"> Chicken</a>
+            </li>
+            <li>
+              <a href="#" class="visible-xs"> Beef</a>
+            </li>
+            <li>
+              <a href="#" class="visible-xs"> Sushi</a>
+            </li>
+          </ul><!-- #nav-list -->
+        </div><!-- .collapse .navbar-collapse -->
+      </div>
+    </nav>
+  </header>
+  <div id="main-content" class="container">
+    <h2 id="categories-title" class="text-center">Our Menu</h2>
+      
+      <section class="row">
+      <div class="menu-item-tile col-xs-12">
+         <h3 class="menu-item-title text-center">Chicken</h3>
+           <p class="menu-item-details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dignissim tempus magna, eu volutpat ligula sodales vel. Integer viverra fringilla metus, in laoreet arcu convallis vel. Mauris rutrum neque leo, et sagittis risus eleifend nec. Suspendisse potenti. Sed tincidunt id mauris quis auctor. Suspendisse ornare porta semper. Curabitur placerat enim magna, tincidunt semper urna ultrices non. Duis ac tempor quam. Aenean sit amet lacus dolor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec condimentum, eros vel iaculis tincidunt, sapien mi pellentesque massa, vitae tristique purus lacus sit amet nibh. Nulla hendrerit gravida lacinia. Curabitur at maximus metus. In nibh lorem, ultrices sit amet cursus a, hendrerit sed diam. Nunc tristique eu metus vel iaculis. Proin blandit id arcu non sodales. Phasellus et pulvinar dui. Morbi id ultrices purus. Nullam sapien orci, sagittis ac hendrerit non, ultrices non arcu. Aenean hendrerit justo non metus feugiat aliquet. Cras cursus enim ut urna convallis sodales. Aenean sit amet nisi quis urna volutpat ornare. Suspendisse sagittis tempus sapien, eu faucibus dui. Cras ultricies nunc nec ante congue consectetur. Nulla at mollis ipsum, non pharetra sem. Pellentesque imperdiet congue tincidunt. Aliquam eleifend enim non arcu sodales sagittis. Phasellus ultrices sapien ac ligula rhoncus, vel laoreet metus eleifend. Morbi vitae nibh nec ligula condimentum pulvinar. Nullam lacinia, urna non tincidunt mollis, enim urna pulvinar arcu, id porta magna eros ac dolor. Sed vitae faucibus nunc, id faucibus eros. Aliquam suscipit nunc eu lorem mattis molestie. Nulla ullamcorper sodales eleifend.</p>
+        <hr class="visible-xs">
+      </div>
+        
+      <div class="menu-item-tile col-xs-12">
+        <h3 class="menu-item-title text-center">Beef</h3>
+            <p class="menu-item-details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dignissim tempus magna, eu volutpat ligula sodales vel. Integer viverra fringilla metus, in laoreet arcu convallis vel. Mauris rutrum neque leo, et sagittis risus eleifend nec. Suspendisse potenti. Sed tincidunt id mauris quis auctor. Suspendisse ornare porta semper. Curabitur placerat enim magna, tincidunt semper urna ultrices non. Duis ac tempor quam. Aenean sit amet lacus dolor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec condimentum, eros vel iaculis tincidunt, sapien mi pellentesque massa, vitae tristique purus lacus sit amet nibh. Nulla hendrerit gravida lacinia. Curabitur at maximus metus. In nibh lorem, ultrices sit amet cursus a, hendrerit sed diam. Nunc tristique eu metus vel iaculis. Proin blandit id arcu non sodales. Phasellus et pulvinar dui. Morbi id ultrices purus. Nullam sapien orci, sagittis ac hendrerit non, ultrices non arcu. Aenean hendrerit justo non metus feugiat aliquet. Cras cursus enim ut urna convallis sodales. Aenean sit amet nisi quis urna volutpat ornare. Suspendisse sagittis tempus sapien, eu faucibus dui. Cras ultricies nunc nec ante congue consectetur. Nulla at mollis ipsum, non pharetra sem. Pellentesque imperdiet congue tincidunt. Aliquam eleifend enim non arcu sodales sagittis. Phasellus ultrices sapien ac ligula rhoncus, vel laoreet metus eleifend. Morbi vitae nibh nec ligula condimentum pulvinar. Nullam lacinia, urna non tincidunt mollis, enim urna pulvinar arcu, id porta magna eros ac dolor. Sed vitae faucibus nunc, id faucibus eros. Aliquam suscipit nunc eu lorem mattis molestie. Nulla ullamcorper sodales eleifend.</p>
+        <hr class="visible-xs">
+      </div>
+
+          <div class="menu-item-tile col-xs-12">
+            <h3 class="menu-item-title text-center">Sushi</h3>
+            <p class="menu-item-details">LLorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dignissim tempus magna, eu volutpat ligula sodales vel. Integer viverra fringilla metus, in laoreet arcu convallis vel. Mauris rutrum neque leo, et sagittis risus eleifend nec. Suspendisse potenti. Sed tincidunt id mauris quis auctor. Suspendisse ornare porta semper. Curabitur placerat enim magna, tincidunt semper urna ultrices non. Duis ac tempor quam. Aenean sit amet lacus dolor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec condimentum, eros vel iaculis tincidunt, sapien mi pellentesque massa, vitae tristique purus lacus sit amet nibh. Nulla hendrerit gravida lacinia. Curabitur at maximus metus. In nibh lorem, ultrices sit amet cursus a, hendrerit sed diam. Nunc tristique eu metus vel iaculis. Proin blandit id arcu non sodales. Phasellus et pulvinar dui. Morbi id ultrices purus. Nullam sapien orci, sagittis ac hendrerit non, ultrices non arcu. Aenean hendrerit justo non metus feugiat aliquet. Cras cursus enim ut urna convallis sodales. Aenean sit amet nisi quis urna volutpat ornare. Suspendisse sagittis tempus sapien, eu faucibus dui. Cras ultricies nunc nec ante congue consectetur. Nulla at mollis ipsum, non pharetra sem. Pellentesque imperdiet congue tincidunt. Aliquam eleifend enim non arcu sodales sagittis. Phasellus ultrices sapien ac ligula rhoncus, vel laoreet metus eleifend. Morbi vitae nibh nec ligula condimentum pulvinar. Nullam lacinia, urna non tincidunt mollis, enim urna pulvinar arcu, id porta magna eros ac dolor. Sed vitae faucibus nunc, id faucibus eros. Aliquam suscipit nunc eu lorem mattis molestie. Nulla ullamcorper sodales eleifend.</p>
+          </div>
+        <hr class="visible-xs">
+      </div>
+    </section>
+
+  </div><!-- End of #main-content -->
+  
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
